<resources>
    <string name="app_name">application</string>

    –Bolaning erkaligini kim ko‘taradi, ota-ona... Meni ular hozirgina mol-dunyo uchun o‘limga sotib
    ketdilar. Da’voni kimga qiladilar, qozilarga.. Qozi o‘limimga fatvo chiqardi. Adolatni kimdan
    istaydilar, podshohdan. Podshohga esa mening o‘limim kerak... Shuning uchun osmonga qarab, “Ey,
    Alohim! Yolg‘izning Yori O’zimman deganding, mana men yolg‘iz turibman. Sendan boshqa
    sig‘inadiganim yo‘q!” deya kulib turgandim, – dedi.
    Bu gaplarni eshitib, shohning qalbi erib, ko‘zlaridan yosh oqdi. “Bir begunohning qonini to‘kib,
    yana qanchalik umr ko‘rardim. Shunday yigitni o‘ldirganimdan ko‘ra, mening o‘lganim ming chandon
    yaxshiroq emasmi?.. ” – deya yigitni ozod qilishlarini buyurdi. Va uni yoniga chaqirib, bag‘riga
    bosdi; yuz-ko‘zlaridan o‘pib, yigitga hisobsiz darajada hadyalar berdi.
    Aytishlariga qaraganda, yigitni ozod etgan hukmdor, bir hafta ichida sog‘ayib, yana bir qancha
    yil uzoq umr ko‘rgan ekan.
    <string name="xikoya">Bir podshoh og‘ir xastalikka chalindi. Bir talay hakimlar: “Bu dardni faqat shu xususiyatdagi insonning o‘ti davolay oladi”, – dedilar. Hukmdor darhol amr etdi;  podshohning mijoziga yaqinroq bo‘lgan odamni izlay boshladilar. Oxiri shunday xislatga ega,  yosh o‘spirin yigitni bir qishloqdan  topib keltirishdi. Hukmdor yigitning  ota-onasini chaqirtirdi; ularga hadyalar berib mamnun qildi va rizoligini oldi.
Vakolatli qozilar, “Podshoh esonligi uchun xalqdan birining qonini to‘kmog‘i uyg‘undir” degan qaror chiqarishdi. Berahm jallod, darhol hoziru nozir bo‘ldi.  Shunda yigit osmonga qarab kulimsiradi. Bundan ajablangan shoh, darhol:
–O’zing o‘limga ketyapsan.. Beg‘am bo‘lib kulishingni boisi ne? Seni kim kuldiryapti? – deya so‘radi.
Shunda yigit podshohga qarab:
–Bolaning erkaligini kim ko‘taradi, ota-ona... Meni  ular hozirgina mol-dunyo uchun o‘limga sotib ketdilar. Da’voni kimga qiladilar, qozilarga.. Qozi o‘limimga fatvo chiqardi. Adolatni kimdan istaydilar, podshohdan. Podshohga esa mening o‘limim kerak...  Shuning uchun osmonga qarab, “Ey, Alohim! Yolg‘izning Yori O’zimman deganding, mana men yolg‘iz turibman. Sendan boshqa sig‘inadiganim yo‘q!”  deya kulib turgandim, – dedi.
Bu gaplarni eshitib, shohning qalbi erib, ko‘zlaridan yosh oqdi. “Bir begunohning qonini to‘kib, yana qanchalik umr ko‘rardim. Shunday yigitni o‘ldirganimdan ko‘ra, mening o‘lganim ming chandon yaxshiroq emasmi?.. ” – deya yigitni ozod qilishlarini buyurdi. Va uni yoniga chaqirib, bag‘riga bosdi; yuz-ko‘zlaridan o‘pib, yigitga hisobsiz darajada hadyalar berdi.
Aytishlariga qaraganda, yigitni ozod etgan hukmdor, bir hafta ichida sog‘ayib, yana bir qancha yil uzoq umr ko‘rgan ekan.Vakolatli qozilar, “Podshoh esonligi uchun xalqdan birining qonini to‘kmog‘i uyg‘undir” degan qaror chiqarishdi. Berahm jallod, darhol hoziru nozir bo‘ldi.  Shunda yigit osmonga qarab kulimsiradi. Bundan ajablangan shoh, darhol:
–O’zing o‘limga ketyapsan.. Beg‘am bo‘lib kulishingni boisi ne? Seni kim kuldiryapti? – deya so‘radi.
Shunda yigit podshohga qarab:
–Bolaning erkaligini kim ko‘taradi, ota-ona... Meni  ular hozirgina mol-dunyo uchun o‘limga sotib ketdilar. Da’voni kimga qiladilar, qozilarga.. Qozi o‘limimga fatvo chiqardi. Adolatni kimdan istaydilar, podshohdan. Podshohga esa mening o‘limim kerak...  Shuning uchun osmonga qarab, “Ey, Alohim! Yolg‘izning Yori O’zimman deganding, mana men yolg‘iz turibman. Sendan boshqa sig‘inadiganim yo‘q!”  deya kulib turgandim, – dedi.
Bu gaplarni eshitib, shohning qalbi erib, ko‘zlaridan yosh oqdi. “Bir begunohning qonini to‘kib, yana qanchalik umr ko‘rardim. Shunday yigitni o‘ldirganimdan ko‘ra, mening o‘lganim ming chandon yaxshiroq emasmi?.. ” – deya yigitni ozod qilishlarini buyurdi. Va uni yoniga chaqirib, bag‘riga bosdi; yuz-ko‘zlaridan o‘pib, yigitga hisobsiz darajada hadyalar berdi.
Aytishlariga qaraganda, yigitni ozod etgan hukmdor, bir hafta ichida sog‘ayib, yana bir qancha yil uzoq umr ko‘rgan ekan.
</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="contaxt_as">Contaxt As</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="contextmenu">Context_Menu\n</string>
    <string name="settings1">Settings</string>
    <string name="about1">About</string>
    <string name="login">Login</string>
    <string name="_0">0</string>
    <string name="counter">Counter</string>
    <string name="increment">Increment</string>
    <string name="clear">Clear</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="register">Register</string>
    <string name="register1">Register</string>
    <string name="fullname">FullName</string>
    <string name="confirmpassword">confirmPassword</string>
    <string name="usernsme">Username</string>
    <string name="username1">Username</string>
    <string name="regpassword">Regpassword</string>
    <string name="confirmpassword1">ConfirmPassword</string>
    <string name="ok1">OK</string>
    <string name="login1">Login</string>
    <string name="fullnames">FullNames</string>
    <string name="usernamereg">Username</string>
    <string name="passwordmain">Password</string>
    <string name="uzum">Uzumning foydali xususiyatlari
Qadimgi Gretsiyada ham uzumning foydali xususiyatlari ma’lum bo’lgan. Uzumni nafaqat shirinlik sifatida iste’mol qilishgan, balki dori-darmon o’rniga tanovvul qilishgan. Uzum quyidagi kasalliklarda yordam beradi:

uzum astma kasalligida foydali hisoblanadi;
qon quyuqlashini oldini oladi;
charchoqni bartaraf etadi;
antioksidantlarni o’zida saqlashi sabab ham terini uzoq vaqt davomida qarishini oldini oladi;
oshqozon-ichak tizimini tozalaydi;
yurak va tomirlar tizimini mustahkamlaydi.
Shuningdek uzumning foydali xususiyatlari uning rangiga qarab farq qiladi. Sariq va yashil rangli uzumlar o’t haydovchi ta’sirga ega bo’lsa, to’q rangli uzumlar esa gemoglabinni ko’tarib, qon bosimini normallashtiradi.

Uzumning zararli tomonlari
Uzum o’zida ko’p miqdorda shakar va kislotani saqlaydi, shu sabab ham uni quyidagi kasalliklarda ehtiyotkorlik bilan iste’mol qilish kerak:

oshqozon yarasi va o’n ikki barmoqli ichak kasalliklarida;
zaharlanish yoki oshqozon buzilishida;
qandli diabet yoki semirishdan aziyat chekuvchi insonlarga;
qorin sanchishida.
Ozishda uzumning o’rni
Uzum boshqa mevalarga nisbatan yuqori kaloriyaga egaligi sabab ham, uni ko’pinch parhez vaqtida iste’mol qilishadi. Chunki undagi ko’pgina shakar qorinni to’q tutadi. Bundan tashqari uzum stressga qarshi kurashadi, kayfiyatni ko’taradi, yog’ni eritib, qarishni oldini ham oladi.

Parhez tutish davrida uzumni po’sti bilan iste’mol qilishadi. Bu organizm uning barcha vitaminlarini qabul qilish va organizmni toksin va shlaklardan tozalash ucun ham zarur.

Bir kunda qancha uzum iste’mol qilish mumkin
Shifokorlar uzumni bir kunda 10-15 dona yeyishni tavsiya qilishadi. Bunda organizm kerakli vitaminlarga to’yinadi, me’yoridan oshmasligi sabab ham zarar keltirmaydi.</string>
    <string name="choose_your_country">Choose Your Country</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="first_fragment">First Fragment</string>

</resources>