<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item


        android:id="@+id/search"
        android:icon="@drawable/search"
        android:iconTint="@color/white"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:title="@string/share" />

    <item


        android:id="@+id/contaxtas"
        android:title="@string/contaxt_as" />

    <item


        android:id="@+id/about"
        android:title="@string/about" />

    <item

        android:id="@+id/settings"
        android:title="@string/settings" />

    <item

        android:id="@+id/othes"
        android:title="@string/others" >

<menu>
<item

    android:id="@+id/item1"
    android:title="@string/item1"/>


    <item

        android:id="@+id/item2"
        android:title="@string/item2"/>


</menu>

</item>
</menu>
